syntax = "proto3";

package assistant_service;

import "google/protobuf/empty.proto";
import "proto/common/common.proto";

option go_package = "github.com/UnicomAI/wanwu/api/proto/assistant-service";

service AssistantService {
  // --- assistant ---
  rpc GetAssistantByIds(GetAssistantByIdsReq) returns (AppBriefList) {}   // 根据智能体id集合获取智能体列表
  rpc AssistantCreate(AssistantCreateReq) returns (AssistantCreateResp) {}
  rpc AssistantUpdate(AssistantUpdateReq) returns (google.protobuf.Empty) {}
  rpc AssistantConfigUpdate(AssistantConfigUpdateReq) returns (google.protobuf.Empty) {}
  rpc AssistantDelete(AssistantDeleteReq) returns (google.protobuf.Empty) {}
  rpc GetAssistantListMyAll(GetAssistantListMyAllReq) returns (AppBriefList) {}
  rpc GetAssistantInfo(GetAssistantInfoReq) returns (AssistantInfo) {}
  rpc AssistantCopy(AssistantCopyReq) returns (AssistantCreateResp) {}

  // --- workFlow ---
  rpc AssistantWorkFlowCreate(AssistantWorkFlowCreateReq) returns (google.protobuf.Empty) {}
  rpc AssistantWorkFlowDelete(AssistantWorkFlowDeleteReq) returns (google.protobuf.Empty) {}
  rpc AssistantWorkFlowEnableSwitch(AssistantWorkFlowEnableSwitchReq) returns (google.protobuf.Empty) {}
  rpc AssistantWorkFlowDeleteByWorkflowId(AssistantWorkFlowDeleteByWorkflowIdReq) returns (google.protobuf.Empty) {}

  // --- MCP ---
  rpc AssistantMCPCreate(AssistantMCPCreateReq) returns (google.protobuf.Empty) {}
  rpc AssistantMCPDelete(AssistantMCPDeleteReq) returns (google.protobuf.Empty) {}
  rpc AssistantMCPEnableSwitch(AssistantMCPEnableSwitchReq) returns (google.protobuf.Empty) {}
  rpc AssistantMCPGetList(AssistantMCPGetListReq) returns (AssistantMCPList) {}
  rpc AssistantMCPDeleteByMCPId(AssistantMCPDeleteByMCPIdReq) returns (google.protobuf.Empty) {}

  // --- custom builtin tool ---
  rpc AssistantToolCreate(AssistantToolCreateReq) returns (google.protobuf.Empty) {}
  rpc AssistantToolDelete(AssistantToolDeleteReq) returns (google.protobuf.Empty) {}
  rpc AssistantToolEnableSwitch(AssistantToolEnableSwitchReq) returns (google.protobuf.Empty) {}
  rpc AssistantToolConfig(AssistantToolConfigReq) returns (google.protobuf.Empty) {}
  rpc AssistantToolDeleteByToolId(AssistantToolDeleteByToolIdReq) returns (google.protobuf.Empty) {}

  // --- conversation ---
  rpc ConversationCreate(ConversationCreateReq) returns (ConversationCreateResp) {}
  rpc ConversationDelete(ConversationDeleteReq) returns (google.protobuf.Empty) {}
  rpc GetConversationList(GetConversationListReq) returns (GetConversationListResp) {}
  rpc GetConversationDetailList(GetConversationDetailListReq) returns (GetConversationDetailListResp) {}
  rpc AssistantConversionStream(AssistantConversionStreamReq) returns (stream AssistantConversionStreamResp) {}
  rpc AssistantConversionStreamNew(AssistantConversionStreamReq) returns (stream AssistantConversionStreamResp) {}
  rpc ConversationDeleteByAssistantId(ConversationDeleteByAssistantIdReq) returns (google.protobuf.Empty) {}

  // --- custom prompt ---
  rpc CustomPromptCreate(CustomPromptCreateReq) returns (CustomPromptIDResp) {}
  rpc CustomPromptDelete(CustomPromptDeleteReq) returns (google.protobuf.Empty) {}
  rpc CustomPromptUpdate(CustomPromptUpdateReq) returns (google.protobuf.Empty) {}
  rpc CustomPromptGet(CustomPromptGetReq) returns (CustomPromptInfo) {}
  rpc CustomPromptGetList(CustomPromptGetListReq) returns (CustomPromptList) {}
  rpc CustomPromptCopy(CustomPromptCopyReq) returns (CustomPromptIDResp) {}
}

message AssistantConversionStreamResp {
  string content = 1;
}

message Identity {
  string userId = 1;
  string orgId = 2;
}

message GetAssistantByIdsReq{
  repeated string assistantIdList = 1;
  Identity identity = 2;
}

message AppBriefList{
  repeated common.AppBrief assistantInfos = 1;
}

message AssistantCreateReq {
  common.AppBriefConfig assistantBrief = 1;
  Identity identity = 2;
}

message AssistantCreateResp {
  string assistantId = 1;
}

message AssistantUpdateReq {
  string assistantId = 1;
  common.AppBriefConfig assistantBrief = 2;
  Identity identity = 3;
}

message AssistantConfigUpdateReq {
  string assistantId = 1;
  string instructions = 2;
  string prologue = 3;
  repeated string recommendQuestion = 4;
  common.AppModelConfig modelConfig = 5;                  // 模型配置
  AssistantKnowledgeBaseConfig knowledgeBaseConfig = 6;         // 知识库
  common.AppModelConfig rerankConfig = 7;                         // Rerank模型
  Identity identity = 9;
  AssistantSafetyConfig safetyConfig = 10;
  AssistantVisionConfig visionConfig = 11;
}

message AssistantSafetyConfig {
  bool enable = 1;
  repeated SensitiveTable SensitiveTable = 2;
}

message SensitiveTable {
  string tableId = 1;
  string tableName = 2;
}

message AssistantVisionConfig {
  int32 maxPicNum = 1;
  int32 picNum = 2;
}

message AssistantDeleteReq {
  string assistantId = 1;
  Identity identity = 2;
}

message AssistantKnowledgeBaseConfig {
  repeated string knowledgeBaseIds = 1;   // 知识库信息
  int32 maxHistory = 2;                           // 最长上下文
  float threshold = 3;                            // 过滤阈值
  int32 topK = 4;                                 // topK
  string matchType = 5; //matchType：vector（向量检索）、text（文本检索）、mix（混合检索：向量+文本）
  float keywordPriority = 6;// 关键词权重
  int32 priorityMatch = 7;// 权重匹配，只有在混合检索模式下，选择权重设置后，这个才设置为1
  float semanticsPriority = 8;// 语义权重
  float termWeight = 9; // 关键词系数
  bool termWeightEnable = 10; // 关键词系数开关
  repeated AppKnowledgeBase appKnowledgeBaseList = 11;
  bool useGraph = 12;
}

message AppKnowledgeBase {
  string knowledgeBaseId = 1;
  string knowledgeBaseName = 2;
  int32 graphSwitch = 3; // 知识图谱开关
  MetaDataFilterParams metaDataFilterParams = 4;
}

message MetaDataFilterParams {
  bool filterEnable = 1; // 元数据过滤开关
  string filterLogicType = 2;// 元数据逻辑条件：and/or
  repeated MetaFilterParams metaFilterParams = 3;// 元数据过滤参数列表
}

message MetaFilterParams {
  string key = 1;
  string type = 2;
  string value = 3;
  string condition = 4;
}

message AssistantOnlineSearchConfig {
  string searchUrl = 1;
  string searchKey = 2;
  bool enable = 3;
  string searchRerankId = 4;
}

message GetAssistantListMyAllReq {
  string name = 1;
  Identity identity = 2;
}

message AssistantInfo {
  string assistantId = 1;
  Identity identity = 2;
  common.AppBriefConfig assistantBrief = 3;
  string prologue = 4;
  string instructions = 5;
  repeated string recommendQuestion = 6;
  common.AppModelConfig modelConfig = 7;                 // 模型配置
  AssistantKnowledgeBaseConfig knowledgeBaseConfig = 8;  // 知识库
  common.AppModelConfig rerankConfig = 9;                // Rerank模型
  int32 scope = 11;
  repeated AssistantWorkFlowInfos workFlowInfos = 12;
  repeated AssistantMCPInfos mcpInfos = 13;
  repeated AssistantToolInfos toolInfos = 15;
  int64 creatTime = 16;
  int64 updateTime = 17;
  AssistantSafetyConfig safetyConfig = 18;
  AssistantVisionConfig visionConfig = 19;
}


message AssistantWorkFlowInfos{
  string id = 1;
  string workFlowId = 2;
  string apiName = 3;
  bool enable = 4;
}

message AssistantMCPInfos{
  string id = 1;
  string mcpId = 2;
  string mcpType = 3;
  string actionName = 4;
  bool enable = 5;
}

message AssistantToolInfos{
  string id = 1;
  string toolId = 2;
  string toolType = 3;
  string actionName = 4;
  bool enable = 5;
  string toolConfig = 6;
}

message GetAssistantInfoReq {
  string assistantId = 1;
  Identity identity = 2;
}

message AssistantCopyReq {
  string assistantId = 1;
  Identity identity = 2;
}

message AssistantWorkFlowCreateReq {
  string assistantId = 1;
  string schema = 2;
  string workFlowId = 3;
  Identity identity = 4;
}

message AssistantWorkFlowDeleteReq {
  string assistantId = 1;
  string workFlowId = 2;
  Identity identity = 3;
}

message AssistantWorkFlowEnableSwitchReq {
  string assistantId = 1;
  string workFlowId = 2;
  bool enable = 3;
  Identity identity = 4;
}

message AssistantMCPCreateReq {
  string assistantId = 1;
  string mcpId = 2;
  string mcpType = 3;
  string actionName = 4;
  Identity identity = 5;
}

message AssistantMCPDeleteReq {
  string assistantId = 1;
  string mcpId = 2;
  string mcpType = 3;
  string actionName = 4;
  Identity identity = 5;
}

message AssistantMCPDeleteByMCPIdReq {
  string mcpId = 1;
  string mcpType = 2;
  Identity identity = 3;
}

message AssistantMCPEnableSwitchReq {
  string assistantId = 1;
  string mcpId = 2;
  string mcpType = 3;
  string actionName = 4;
  bool enable = 5;
  Identity identity = 6;
}

message AssistantMCPGetListReq {
  string assistantId = 1;
  Identity identity = 2;
}

message AssistantMCPInfo {
  uint32 id = 1;
  uint32 assistantMcpId = 2;
  string mcpId = 3;
  bool enable = 4;
  string userId = 5;
  string orgId = 6;
  int64 createdAt = 7;
  int64 updatedAt = 8;
}

message AssistantMCPList {
  repeated AssistantMCPInfo assistantMCPInfos = 1;
}

message AssistantToolDeleteByToolIdReq {
  string toolId = 1;
  string toolType = 2;
  Identity identity = 3;
}

message AssistantToolCreateReq {
  string assistantId = 1;
  string toolId = 2;
  string toolType = 3;
  string actionName = 4;
  Identity identity = 5;
}

message AssistantToolDeleteReq {
  string assistantId = 1;
  string toolId = 2;
  string toolType = 3;
  string actionName = 4;
}

message AssistantToolEnableSwitchReq {
  string assistantId = 1;
  string toolId = 2;
  string toolType = 3;
  string actionName = 4;
  bool enable = 5;
  Identity identity = 6;
}

message AssistantToolConfigReq {
  string assistantId = 1;
  string toolId = 2;
  string toolConfig = 3;
  Identity identity = 4;
}

message ConversationCreateReq {
  string assistantId = 1;
  string prompt = 2;
  Identity identity = 3;
}

message ConversationCreateResp {
  string conversationId = 1;
}

message ConversationDeleteReq {
  string conversationId = 1;
  Identity identity = 2;
}

message GetConversationListReq {
  string assistantId = 1;
  int32 pageSize = 2;
  int32 pageNo = 3;
  Identity identity = 4;
}

message GetConversationListResp {
  repeated ConversationInfo data = 1;
  int64 total = 2;
  int32 pageSize = 3;
  int32 pageNo = 4;
}

message ConversationInfo{
  string conversationId = 1;
  string assistantId = 2;
  string title = 3;
  int64 creatTime = 4;
}

message GetConversationDetailListReq {
  string conversationId = 1;
  int32 pageSize = 2;
  int32 pageNo = 3;
  Identity identity = 4;
}

message GetConversationDetailListResp {
  repeated ConversionDetailInfo data = 1;
  int64 total = 2;
  int32 pageSize = 3;
  int32 pageNo = 4;
}

message ConversionDetailInfo{
  string id = 1;
  string assistantId = 2;
  string conversationId = 3;
  string prompt = 4;
  string sysPrompt = 5;
  string algPrompt = 6;
  repeated RequestFile requestFiles = 7;
  string response = 8;
  string searchList = 9;
  int32 qaType = 10;
  string createdBy = 11;
  int64 createdAt = 12;
  int64 updatedAt = 13;
  string fileName = 14;
  string fileFormat = 15;
  int64 fileSize = 16;
}

message RequestFile {
  string FileName = 1;
  int64 FileSize = 2;
  string FileUrl = 3;
}

message AssistantConversionStreamReq {
  string assistantId = 1;
  string conversationId = 2;
  repeated ConversionStreamFile fileInfo = 3;
  bool trial = 4;
  string prompt = 5;
  string systemPrompt = 6;
  Identity identity = 7;
}

message ConversionStreamFile{
  string fileName = 1;
  int64 fileSize = 2;
  string fileUrl = 3;
}

message ConversationDeleteByAssistantIdReq {
  string assistantId = 1;
  Identity identity = 2;
}

message AssistantWorkFlowDeleteByWorkflowIdReq {
  string workflowId = 1;
  Identity identity = 2;
}

message CustomPromptCreateReq {
  string avatarPath = 1;
  string name = 2;
  string desc = 3;
  string prompt = 4;
  Identity identity = 5;
}

message CustomPromptIDResp {
  string customPromptId = 1;
}

message CustomPromptDeleteReq {
  string customPromptId = 1;
  Identity identity = 2;
}

message CustomPromptUpdateReq {
  string customPromptId = 1;
  string avatarPath = 2;
  string name = 3;
  string desc = 4;
  string prompt = 5;
  Identity identity = 6;
}

message CustomPromptGetReq {
  string customPromptId = 1;
  Identity identity = 2;
}

message CustomPromptInfo {
  string customPromptId = 1;
  string avatarPath = 2;
  string name = 3;
  string desc = 4;
  string prompt = 5;
  int64 updatedAt = 6;
  Identity identity = 7;
}

message CustomPromptGetListReq {
  string name = 1;
  Identity identity = 2;
}

message CustomPromptList {
  repeated CustomPromptInfo customPromptInfos = 1;
  int64 total = 2;
}

message CustomPromptCopyReq {
  string customPromptId = 1;
  Identity identity = 2;
}
